--- a/WebviewTest/test.html
+++ b/WebviewTest/test.html
@@ -15,7 +15,8 @@
             </head>
     <body>
         <h1>测试</h1>
-        <center><a href="javascript:void(0)" onMouseDown="imageClicked()">click me</a></center>
+        <center><a href="#" onClick="imageClicked()">click me</a></center>
+            <a href="#" onClick="a()">fuck</a>
         <form>
             <input id="field_1" type="text" name="value" /><br/><br/><br/>
             <input id="field_2" type="text" name="value" /><br/><br/><br/>
